--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,18 @@
 language: go
 
+sudo: false
+
 go:
-- 1.x
-- 1.12.x
+  - 1.x
+  - 1.12.x
+  - tip
+
+# https://github.com/mattn/goveralls#github-integration
+before_install:
+  - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
+
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
+
 
